--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,8 +3,18 @@
         <div id="about-text">
             <div class="section-heading">About</div>
             <p class="paragraph-text justify-text">
-15 years ago, while I was working as a researcher in quantum information theory, my little sister asked me to build her a robot dog. I figured: "Why not?". After finishing her mobile robot, I was hooked. Since then, I've published award-winning robotics research, developed motion-control algorithms for robots in operating rooms & factory floors, built a framework to coordinate two robot arms in high-speed high-accuracy tasks, and founded a VC-backed construction-tech startup.            </p>
-           
+               15 years ago, while I was working as a researcher in quantum information theory, 
+                my little sister asked me to build her a robot dog. I figured: "Why not?".
+                After finishing her mobile robot, I was hooked. Since then,
+                I've published award-winning robotics research, developed motion-control 
+                algorithms for robots in operating rooms & factory floors, built a framework to
+                coordinate two robot arms in high-speed high-accuracy tasks, and
+                founded a VC-backed construction-tech startup.            
+            </p>
+            <p class="paragraph-text justify-text">
+            I'm available for employment and contracting opportunities. Contact me!
+            </p>
+
         </div>
     </section>
 </div>
