--- a/_includes/extra.html
+++ b/_includes/extra.html
@@ -6,7 +6,7 @@
                 Interesting work opportunity or collaboration? Send me a line!  <a href="mailto:{{ site.email }}">{{ site.email }}</a> 
             </p>
             <p class="paragraph-text justify-text">
-                My resume is available here: <a href="{{ site.blog_url }}/resume/resume.pdf">PDF</a>.
+                My resume is available here: <a href="{{ site.blog_url }}/Ben_Blumer_Resume.pdf">PDF</a>.
             </p>
             <div class="extra-links">
                 <span class="hint--bottom bottom-link" aria-label="Email">
