Get rid of uneeded sections. Update project hdngs.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
 
     {% include projects.html %}
 
-    {% include blogs.html %}
+    <!-- {% include blogs.html %} -->
         
-    {% include extra.html %}
+    {% include contact.html %}
 
     {% include footer.html %}
 
