--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,11 +5,16 @@
             
                 <div class="project-technologies">
 
-                    <a id="featured" class="semi-transparent-button with-border white-button" onclick="selected('featured')">Featured</a>
                     <a id="all" class="semi-transparent-button with-border white-button" onclick="selected('all')">All</a>
-                    <a id="webdev" class="semi-transparent-button with-border white-button" onclick="selected('webdev')">WebDev</a>
-                    <a id="native" class="semi-transparent-button with-border white-button" onclick="selected('native')">Native</a>
-                    <a id="security" class="semi-transparent-button with-border white-button" onclick="selected('security')">Security</a>
+                    <a id="motion_planning" class="semi-transparent-button with-border white-button" onclick="selected('motion_planning')">Motion Planning</a>
+                    <a id="vision" class="semi-transparent-button with-border white-button" onclick="selected('vision')">Vision</a>
+                    <a id="oss_o" class="semi-transparent-button with-border white-button" onclick="selected('oss_o')">Open source original</a>
+                    <a id="oss_p" class="semi-transparent-button with-border white-button" onclick="selected('oss_p')">Open source patches and contributions</a>
+                    <a id="simulation" class="semi-transparent-button with-border white-button" onclick="selected('simulation')">Simulation</a>
+                    <a id="m_f_e" class="semi-transparent-button with-border white-button" onclick="selected('m_f_e')">Mechanical / Firmware / Electrical</a>
+                    <a id="mobile" class="semi-transparent-button with-border white-button" onclick="selected('mobile')">Mobile</a>
+                    <a id="docker" class="semi-transparent-button with-border white-button" onclick="selected('docker')">Docker</a>
+
                     <a id="diy" class="semi-transparent-button with-border white-button" onclick="selected('diy')">DIY</a>
 
                 </div>
