get rid of justified text

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,10 +2,10 @@
     <section class="section extra" id="extra">
         <div>
             <div class="section-heading" id="chat-text">Contact</div>
-            <p class="paragraph-text justify-text">
+            <p class="paragraph-text">
                 Interesting work opportunity or collaboration? Send me a line!  <a href="mailto:{{ site.email }}">{{ site.email }}</a> 
             </p>
-            <p class="paragraph-text justify-text">
+            <p class="paragraph-text">
                 My resume is available here: <a href="{{ site.blog_url }}/Ben_Blumer_Resume.pdf">PDF</a>.
             </p>
             <div class="extra-links">
