--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
 
     {% include skills.html %}
 
+    {% include highlevelskills.html %}
+
     {% include projects.html %}
 
     <!-- {% include blogs.html %} -->
