--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
     {% include skills.html %}
 
-    {% include highlevelskills.html %}
+    {% include highlevel_skills.html %}
 
     {% include projects.html %}
 
