Updated skills summaries

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,13 +2,32 @@
 <div class="section-wrapper">
     <section class="section skills" id="skills">
         <div>
-            <div class="section-heading" id="skills-text">Skills</div>
+            <div class="section-heading" id="skills-text">Skills and technologies</div>
 
             <div class="skills-grid">
                 <div class="what-i-do">
-                    <h3 class="center-align skills-subsection">Summary</h3>
+                    <h3 class="center-align skills-subsection">Leadership</h3>
                     <p class="paragraph-text center-align">
-                        I'm a web engineer fluent in modern web development. I have a serious passion for engineering solutions using the internet. InfoSec guy, blue team. Let's build a beautiful, speedy and safe web together.
+                        
+                        I love taking ownership of a project from start to finish. I founded ShapeMeasure to automate measuring and cutting in construction and grew the company to 15 employees, $500K+ run rate, and thousands of delivered sales.
+                    </p>
+                    <h3 class="center-align skills-subsection">Software</h3>
+                    <p class="paragraph-text center-align">
+                                                
+                        I've developed robotics software in C, C++, Python. Using tools such as ROS, OpenCV, Numpy, git, Eclipse, and Docker. I have experience developing in Linux and Windows. Checkout my free and open-source software contributions.
+
+                    </p>
+                    <h3 class="center-align skills-subsection">Research</h3>
+                    <p class="paragraph-text center-align">
+                        
+                        I've tackled research-grade problems in quantum information, human-robot interaction, and robot motion planning. I've also secured over $650K in research grants. See my publications and patents.
+
+                    </p>
+                    <h3 class="center-align skills-subsection">Prototyping</h3>
+                    <p class="paragraph-text center-align">
+                        
+                        I love getting my hands dirty with electro-mechanical prototyping. I have experience with microcontrollers, basic circuit design, sensors, and actuators. I've designed and built ESCs, mobile robots, and 3D printed / laser cut widgets for robot manipulators.
+
                     </p>
                 </div>
                 <div class="technical-skills">
@@ -29,17 +48,17 @@
                             <div class="skillbar-bar" style="background: #3498db"></div>
                         </div> <!-- End Skill Bar -->
 
-                        
+
                         <div class="skillbar clearfix " data-percent="75%">
                             <div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
                             <div class="skillbar-bar" style="background: #3498db;"></div>
                         </div> <!-- End Skill Bar -->
-                        
+
                         <div class="skillbar clearfix " data-percent="75%">
                             <div class="skillbar-title" style="background: #2980b9;"><span>Python</span></div>
                             <div class="skillbar-bar" style="background: #3498db;"></div>
                         </div> <!-- End Skill Bar -->
-                        
+
                         <div class="skillbar clearfix " data-percent="70%">
                             <div class="skillbar-title" style="background: #2980b9"><span>Flask</span></div>
                             <div class="skillbar-bar" style="background: #3498db;"></div>
