--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -12,7 +12,7 @@
                         </p>
                         <h3 class="center-align skills-subsection">Software</h3>
                         <p class="paragraph-text center-align">
-                            I've developed robotics software in C, C++, Python. Using tools such as ROS, OpenCV, Numpy, git, Eclipse, and Docker. I have experience developing in Linux and Windows. Checkout my free and open-source software contributions.
+                            I've developed robotics software in C, C++, Python. Using tools such as ROS, OpenCV, Numpy, git, Eclipse, Visual Studio Code, and Docker. I have experience developing in Linux and Windows. Checkout my free and open-source software contributions.
                         </p>
                     </div>
                 </div>
@@ -31,44 +31,41 @@
                 </div>
 
                 <div class="technical-skills" style="flex-basis: 100%; margin-top: 20px;">
-                    <h3 class="center-align skills-subsection">Technical</h3>
-                    <div class="progress-bars">
-                        <div class="skillbar clearfix " data-percent="90%">
-                            <div class="skillbar-title" style="background: #2980b9;"><span>Javascript</span></div>
-                            <div class="skillbar-bar" style="background: #3498db;"></div>
-                        </div> <!-- End Skill Bar -->
+                    <h3 class="center-align skills-subsection">Technologies</h3>
 
-                        <div class="skillbar clearfix " data-percent="85%">
-                            <div class="skillbar-title" style="background: #2980b9;"><span>ReactJS</span></div>
-                            <div class="skillbar-bar" style="background: #3498db;"></div>
-                        </div> <!-- End Skill Bar -->
-
-                        <div class="skillbar clearfix " data-percent="80%">
-                            <div class="skillbar-title" style="background: #2980b9;"><span>GNU/Linux</span></div>
-                            <div class="skillbar-bar" style="background: #3498db"></div>
-                        </div> <!-- End Skill Bar -->
-
-
-                        <div class="skillbar clearfix " data-percent="75%">
-                            <div class="skillbar-title" style="background: #2980b9;"><span>CSS3</span></div>
-                            <div class="skillbar-bar" style="background: #3498db;"></div>
-                        </div> <!-- End Skill Bar -->
-
-                        <div class="skillbar clearfix " data-percent="75%">
-                            <div class="skillbar-title" style="background: #2980b9;"><span>Python</span></div>
-                            <div class="skillbar-bar" style="background: #3498db;"></div>
-                        </div> <!-- End Skill Bar -->
-
-                        <div class="skillbar clearfix " data-percent="70%">
-                            <div class="skillbar-title" style="background: #2980b9"><span>Flask</span></div>
-                            <div class="skillbar-bar" style="background: #3498db;"></div>
-                        </div> <!-- End Skill Bar -->
-
-                        <div class="skillbar clearfix " data-percent="70%">
-                            <div class="skillbar-title" style="background: #2980b9"><span>InfoSec</span></div>
-                            <div class="skillbar-bar" style="background: #3498db"></div>
-                        </div> <!-- End Skill Bar -->                    </div>
-                </div>
+                    <div class="card__meta">
+                        <span class="project-technology paragraph-text-normal">ROS</span>
+                        <span class="project-technology paragraph-text-normal">ROS2</span>
+                        <span class="project-technology paragraph-text-normal">Docker</span>
+                        <span class="project-technology paragraph-text-normal">Python</span>
+                        <span class="project-technology paragraph-text-normal">Django</span>
+                        <span class="project-technology paragraph-text-normal">ESP IDF</span>
+                        <span class="project-technology paragraph-text-normal">Kalman filter</span>
+                        <span class="project-technology paragraph-text-normal">Localization</span>
+                        <span class="project-technology paragraph-text-normal">Sensors</span>
+                        <span class="project-technology paragraph-text-normal">Actuators</span>
+                        <span class="project-technology paragraph-text-normal">CAD</span>
+                        <span class="project-technology paragraph-text-normal">CNC</span>
+                        <span class="project-technology paragraph-text-normal">Fusion 360</span>
+                        <span class="project-technology paragraph-text-normal">Rapid prototyping</span>
+                        <span class="project-technology paragraph-text-normal">3D Printing</span>
+                        <span class="project-technology paragraph-text-normal">Laser cutting</span>
+                        <span class="project-technology paragraph-text-normal">Mobile robots</span>
+                        <span class="project-technology paragraph-text-normal">Robot arms</span>
+                        <span class="project-technology paragraph-text-normal">Motion planning</span>
+                        <span class="project-technology paragraph-text-normal">C++</span>
+                        <span class="project-technology paragraph-text-normal">WAM</span>
+                        <span class="project-technology paragraph-text-normal">UR5</span>
+                        <span class="project-technology paragraph-text-normal">Simulation</span>
+                        <span class="project-technology paragraph-text-normal">Gazebo</span>
+                        <span class="project-technology paragraph-text-normal">Mechanical design</span>
+                        <span class="project-technology paragraph-text-normal">Microcontrollers</span>
+                        <span class="project-technology paragraph-text-normal">Raspberry Pi</span>
+                        <span class="project-technology paragraph-text-normal">Arduino</span>
+                        <span class="project-technology paragraph-text-normal">Electromechanical</span>
+                        <span class="project-technology paragraph-text-normal">Physics</span>
+                        
+                    </div>
             </div>
         </div>
     </section>
