BLue and orange techs

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -34,36 +34,36 @@
                     <h3 class="center-align skills-subsection">Technologies</h3>
 
                     <div class="card__meta">
-                        <span class="project-technology paragraph-text-normal">ROS</span>
-                        <span class="project-technology paragraph-text-normal">ROS2</span>
-                        <span class="project-technology paragraph-text-normal">Docker</span>
-                        <span class="project-technology paragraph-text-normal">Python</span>
-                        <span class="project-technology paragraph-text-normal">Django</span>
-                        <span class="project-technology paragraph-text-normal">ESP IDF</span>
-                        <span class="project-technology paragraph-text-normal">Kalman filter</span>
-                        <span class="project-technology paragraph-text-normal">Localization</span>
-                        <span class="project-technology paragraph-text-normal">Sensors</span>
-                        <span class="project-technology paragraph-text-normal">Actuators</span>
-                        <span class="project-technology paragraph-text-normal">CAD</span>
-                        <span class="project-technology paragraph-text-normal">CNC</span>
-                        <span class="project-technology paragraph-text-normal">Fusion 360</span>
-                        <span class="project-technology paragraph-text-normal">Rapid prototyping</span>
-                        <span class="project-technology paragraph-text-normal">3D Printing</span>
-                        <span class="project-technology paragraph-text-normal">Laser cutting</span>
-                        <span class="project-technology paragraph-text-normal">Mobile robots</span>
-                        <span class="project-technology paragraph-text-normal">Robot arms</span>
-                        <span class="project-technology paragraph-text-normal">Motion planning</span>
-                        <span class="project-technology paragraph-text-normal">C++</span>
-                        <span class="project-technology paragraph-text-normal">WAM</span>
-                        <span class="project-technology paragraph-text-normal">UR5</span>
-                        <span class="project-technology paragraph-text-normal">Simulation</span>
-                        <span class="project-technology paragraph-text-normal">Gazebo</span>
-                        <span class="project-technology paragraph-text-normal">Mechanical design</span>
-                        <span class="project-technology paragraph-text-normal">Microcontrollers</span>
-                        <span class="project-technology paragraph-text-normal">Raspberry Pi</span>
-                        <span class="project-technology paragraph-text-normal">Arduino</span>
-                        <span class="project-technology paragraph-text-normal">Electromechanical</span>
-                        <span class="project-technology paragraph-text-normal">Physics</span>
+                        <span class="project-technology paragraph-text">ROS</span>
+                        <span class="project-technology paragraph-text">ROS2</span>
+                        <span class="project-technology paragraph-text">Docker</span>
+                        <span class="project-technology paragraph-text">Python</span>
+                        <span class="project-technology paragraph-text">Django</span>
+                        <span class="project-technology paragraph-text">ESP IDF</span>
+                        <span class="project-technology paragraph-text">Kalman filter</span>
+                        <span class="project-technology paragraph-text">Localization</span>
+                        <span class="project-technology paragraph-text">Sensors</span>
+                        <span class="project-technology paragraph-text">Actuators</span>
+                        <span class="project-technology paragraph-text">CAD</span>
+                        <span class="project-technology paragraph-text">CNC</span>
+                        <span class="project-technology paragraph-text">Fusion 360</span>
+                        <span class="project-technology paragraph-text">Rapid prototyping</span>
+                        <span class="project-technology paragraph-text">3D Printing</span>
+                        <span class="project-technology paragraph-text">Laser cutting</span>
+                        <span class="project-technology paragraph-text">Mobile robots</span>
+                        <span class="project-technology paragraph-text">Robot arms</span>
+                        <span class="project-technology paragraph-text">Motion planning</span>
+                        <span class="project-technology paragraph-text">C++</span>
+                        <span class="project-technology paragraph-text">WAM</span>
+                        <span class="project-technology paragraph-text">UR5</span>
+                        <span class="project-technology paragraph-text">Simulation</span>
+                        <span class="project-technology paragraph-text">Gazebo</span>
+                        <span class="project-technology paragraph-text">Mechanical design</span>
+                        <span class="project-technology paragraph-text">Microcontrollers</span>
+                        <span class="project-technology paragraph-text">Raspberry Pi</span>
+                        <span class="project-technology paragraph-text">Arduino</span>
+                        <span class="project-technology paragraph-text">Electromechanical</span>
+                        <span class="project-technology paragraph-text">Physics</span>
                         
                     </div>
             </div>
