--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html lang="en-us">
     
+    {% include head.html %}
 
-<body>
+    <body>
 
+        {% include nav.html %}
+    
+        {% include about.html %}
+    
+        
+        {% include skills.html %}
+    
+        {% include skills.html %}
+
+        {% include projects.html %}
+    
+        {% include blogs.html %}
+            
+        {% include contact.html %}
+    
+        {% include footer.html %}
+    
+        {% include scripts.html %}
 </body>
 </html>
