added awards, patents, pubs

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,72 +1,79 @@
 <div class="section-wrapper">
-    <section class="section skills" id="skills">
-        <div>
-            <div class="section-heading" id="skills-text">Skills and technologies</div>
+  <section class="section skills" id="skills">
+    <div>
+      <div class="section-heading" id="skills-text">Skills and technologies</div>
 
-            <div class="skills-grid" style="display: flex; flex-wrap: wrap; justify-content: space-around;">
-                <div style="flex: 1; min-width: 45%; max-width: 45%;">
-                    <div class="what-i-do">
-                        <h3 class="center-align skills-subsection">Leadership</h3>
-                        <p class="paragraph-text center-align">
-                            I love taking ownership of a project from start to finish. I founded ShapeMeasure to automate measuring and cutting in construction and grew the company to 15 employees, $500K+ run rate, and thousands of delivered sales.
-                        </p>
-                        <h3 class="center-align skills-subsection">Software</h3>
-                        <p class="paragraph-text center-align">
-                            I've developed robotics software in C, C++, Python. Using tools such as ROS, OpenCV, Numpy, git, Eclipse, Visual Studio Code, and Docker. I have experience developing in Linux and Windows. Checkout my free and open-source software contributions.
-                        </p>
-                    </div>
-                </div>
-
-                <div style="flex: 1; min-width: 45%; max-width: 45%;">
-                    <div class="what-i-do">
-                        <h3 class="center-align skills-subsection">Research</h3>
-                        <p class="paragraph-text center-align">
-                            I've tackled research-grade problems in quantum information, human-robot interaction, and robot motion planning. I've also secured over $650K in research grants. See my publications and patents.
-                        </p>
-                        <h3 class="center-align skills-subsection">Prototyping</h3>
-                        <p class="paragraph-text center-align">
-                            I love getting my hands dirty with electro-mechanical prototyping. I have experience with microcontrollers, basic circuit design, sensors, and actuators. I've designed and built ESCs, mobile robots, and 3D printed / laser cut widgets for robot manipulators.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="technical-skills" style="flex-basis: 100%; margin-top: 20px;">
-                    <h3 class="center-align skills-subsection">Technologies</h3>
-
-                    <div class="card__meta">
-                        <span class="project-technology paragraph-text">ROS</span>
-                        <span class="project-technology paragraph-text">ROS2</span>
-                        <span class="project-technology paragraph-text">Docker</span>
-                        <span class="project-technology paragraph-text">Python</span>
-                        <span class="project-technology paragraph-text">Django</span>
-                        <span class="project-technology paragraph-text">ESP IDF</span>
-                        <span class="project-technology paragraph-text">Kalman filter</span>
-                        <span class="project-technology paragraph-text">Localization</span>
-                        <span class="project-technology paragraph-text">Sensors</span>
-                        <span class="project-technology paragraph-text">Actuators</span>
-                        <span class="project-technology paragraph-text">CAD</span>
-                        <span class="project-technology paragraph-text">CNC</span>
-                        <span class="project-technology paragraph-text">Fusion 360</span>
-                        <span class="project-technology paragraph-text">Rapid prototyping</span>
-                        <span class="project-technology paragraph-text">3D Printing</span>
-                        <span class="project-technology paragraph-text">Laser cutting</span>
-                        <span class="project-technology paragraph-text">Mobile robots</span>
-                        <span class="project-technology paragraph-text">Robot arms</span>
-                        <span class="project-technology paragraph-text">Motion planning</span>
-                        <span class="project-technology paragraph-text">C++</span>
-                        <span class="project-technology paragraph-text">WAM</span>
-                        <span class="project-technology paragraph-text">UR5</span>
-                        <span class="project-technology paragraph-text">Simulation</span>
-                        <span class="project-technology paragraph-text">Gazebo</span>
-                        <span class="project-technology paragraph-text">Mechanical design</span>
-                        <span class="project-technology paragraph-text">Microcontrollers</span>
-                        <span class="project-technology paragraph-text">Raspberry Pi</span>
-                        <span class="project-technology paragraph-text">Arduino</span>
-                        <span class="project-technology paragraph-text">Electromechanical</span>
-                        <span class="project-technology paragraph-text">Physics</span>
-                        
-                    </div>
-            </div>
+      <div class="skills-grid" style="display: flex; flex-wrap: wrap; justify-content: space-around;">
+        <div style="flex: 1; min-width: 45%; max-width: 45%;">
+          <div class="what-i-do">
+            <h3 class="center-align skills-subsection">Leadership</h3>
+            <p class="paragraph-text center-align">
+              I love taking ownership of a project from start to finish. I founded ShapeMeasure to automate measuring
+              and cutting in construction and grew the company to 15 employees, $500K+ run rate, and thousands of
+              delivered sales.
+            </p>
+            <h3 class="center-align skills-subsection">Software</h3>
+            <p class="paragraph-text center-align">
+              I've developed robotics software in C, C++, Python. Using tools such as ROS, OpenCV, Numpy, git, Eclipse,
+              Visual Studio Code, and Docker. I have experience developing in Linux and Windows. Checkout my free and
+              open-source software contributions.
+            </p>
+          </div>
         </div>
-    </section>
+
+        <div style="flex: 1; min-width: 45%; max-width: 45%;">
+          <div class="what-i-do">
+            <h3 class="center-align skills-subsection">Research</h3>
+            <p class="paragraph-text center-align">
+              I've tackled research-grade problems in quantum information, human-robot interaction, and robot motion
+              planning. I've also secured over $650K in research grants. See my publications and patents.
+            </p>
+            <h3 class="center-align skills-subsection">Prototyping</h3>
+            <p class="paragraph-text center-align">
+              I love getting my hands dirty with electro-mechanical prototyping. I have experience with
+              microcontrollers, basic circuit design, sensors, and actuators. I've designed and built ESCs, mobile
+              robots, and 3D printed / laser cut widgets for robot manipulators.
+            </p>
+          </div>
+        </div>
+
+        <div class="technical-skills" style="flex-basis: 100%; margin-top: 20px;">
+          <h3 class="center-align skills-subsection">Technologies</h3>
+
+          <div class="card__meta">
+            <span class="project-technology paragraph-text">ROS</span>
+            <span class="project-technology paragraph-text">ROS2</span>
+            <span class="project-technology paragraph-text">Docker</span>
+            <span class="project-technology paragraph-text">Python</span>
+            <span class="project-technology paragraph-text">Django</span>
+            <span class="project-technology paragraph-text">ESP IDF</span>
+            <span class="project-technology paragraph-text">Kalman filter</span>
+            <span class="project-technology paragraph-text">Localization</span>
+            <span class="project-technology paragraph-text">Sensors</span>
+            <span class="project-technology paragraph-text">Actuators</span>
+            <span class="project-technology paragraph-text">CAD</span>
+            <span class="project-technology paragraph-text">CNC</span>
+            <span class="project-technology paragraph-text">Fusion 360</span>
+            <span class="project-technology paragraph-text">Rapid prototyping</span>
+            <span class="project-technology paragraph-text">3D Printing</span>
+            <span class="project-technology paragraph-text">Laser cutting</span>
+            <span class="project-technology paragraph-text">Mobile robots</span>
+            <span class="project-technology paragraph-text">Robot arms</span>
+            <span class="project-technology paragraph-text">Motion planning</span>
+            <span class="project-technology paragraph-text">C++</span>
+            <span class="project-technology paragraph-text">WAM</span>
+            <span class="project-technology paragraph-text">UR5</span>
+            <span class="project-technology paragraph-text">Simulation</span>
+            <span class="project-technology paragraph-text">Gazebo</span>
+            <span class="project-technology paragraph-text">Mechanical design</span>
+            <span class="project-technology paragraph-text">Microcontrollers</span>
+            <span class="project-technology paragraph-text">Raspberry Pi</span>
+            <span class="project-technology paragraph-text">Arduino</span>
+            <span class="project-technology paragraph-text">Electromechanical</span>
+            <span class="project-technology paragraph-text">Physics</span>
+
+          </div>
+        </div>
+      </div>
+  </section>
 </div>
