--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,10 @@
             <a class="semi-transparent-button with-border nav-links" href="#about">ABOUT</a>
             <a class="semi-transparent-button with-border nav-links" href="#skills">SKILLS</a>
             <a class="semi-transparent-button with-border nav-links" href="#projects">PROJECTS</a>
-            <a class="semi-transparent-button with-border nav-links" href="#contact">CONTACT</a>
+            <a class="semi-transparent-button with-border nav-links" href="#pubs">PATENTS AND PUBLICATIONS</a>
+            <a class="semi-transparent-button with-border nav-links" href="#awards">AWARDS</a>
+            <a class="semi-transparent-button with-border nav-links" href="#contact">CONTACT & RESUME</a>
+
         </div>
     </div>
 </section>
