--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,25 +2,31 @@
     <section class="section projects" id="projects">
         <div class="full-width">
             <div class="section-heading" id="featured-projects-text">Projects</div>
-            
-                <div class="project-technologies">
 
-                    <a id="all" class="semi-transparent-button with-border white-button" onclick="selected('all')">All</a>
-                    <a id="motion_planning" class="semi-transparent-button with-border white-button" onclick="selected('motion_planning')">Motion Planning</a>
-                    <a id="vision" class="semi-transparent-button with-border white-button" onclick="selected('vision')">Vision</a>
-                    <a id="oss_o" class="semi-transparent-button with-border white-button" onclick="selected('oss_o')">Open source original</a>
-                    <a id="oss_p" class="semi-transparent-button with-border white-button" onclick="selected('oss_p')">Open source patches and contributions</a>
-                    <a id="simulation" class="semi-transparent-button with-border white-button" onclick="selected('simulation')">Simulation</a>
-                    <a id="m_f_e" class="semi-transparent-button with-border white-button" onclick="selected('m_f_e')">Mechanical / Firmware / Electrical</a>
-                    <a id="mobile" class="semi-transparent-button with-border white-button" onclick="selected('mobile')">Mobile</a>
-                    <a id="docker" class="semi-transparent-button with-border white-button" onclick="selected('docker')">Docker</a>
+            <div class="project-categories">
 
-                    <a id="diy" class="semi-transparent-button with-border white-button" onclick="selected('diy')">DIY</a>
+                <a id="all" class="project-category-button with-border white-button" onclick="selected('all')">All</a>
+                <a id="motion_planning" class="project-category-button with-border white-button" onclick="selected('motion_planning')">Motion
+                    Planning</a>
+                <a id="vision" class="project-category-button with-border white-button"
+                    onclick="selected('vision')">Vision</a>
+                <a id="oss_o" class="project-category-button with-border white-button" onclick="selected('oss_o')">Open
+                    source original</a>
+                <a id="oss_p" class="project-category-button with-border white-button" onclick="selected('oss_p')">Open
+                    source patches and contributions</a>
+                <a id="simulation" class="project-category-button with-border white-button"
+                    onclick="selected('simulation')">Simulation</a>
+                <a id="m_f_e" class="project-category-button with-border white-button"
+                    onclick="selected('m_f_e')">Mechanical / Firmware / Electrical</a>
+                <a id="mobile" class="project-category-button with-border white-button"
+                    onclick="selected('mobile')">Mobile</a>
+                <a id="docker" class="project-category-button with-border white-button"
+                    onclick="selected('docker')">Docker</a>
 
-                </div>
+            </div>
 
-            <div class="projects-wrapper">
-            <!-- filled in by js -->
+            <div class="projects-wrapper"> 
+                <!-- filled in by js -->
             </div>
         </div>
     </section>
