--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,14 +8,15 @@
         {% include nav.html %}
     
         {% include about.html %}
-    
         
         {% include skills.html %}
     
         {% include projects.html %}
-    
-        {% include blogs.html %}
-            
+
+        {% include publications_and_patents.html %}
+        <!-- {% include blogs.html %} -->
+        {% include awards.html %}
+
         {% include contact.html %}
     
         {% include footer.html %}
