Resized project buttons

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,13 +7,17 @@
         <div class="head-name head-title animated" id="head-name">{{ site.title }}</div>
         <div class="head-punchline animated">{{ site.description }}</div>
         <div class="head-menu-wrap">
+
+            <!-- <div class="project-categories"> -->
+
             <a class="semi-transparent-button with-border nav-links" href="#about">ABOUT</a>
             <a class="semi-transparent-button with-border nav-links" href="#skills">SKILLS</a>
             <a class="semi-transparent-button with-border nav-links" href="#projects">PROJECTS</a>
-            <a class="semi-transparent-button with-border nav-links" href="#pubs">PATENTS AND PUBLICATIONS</a>
+            <a class="semi-transparent-button with-border nav-links" href="#pubs">PATENTS <br/>AND<br/> PUBLICATIONS</a>
             <a class="semi-transparent-button with-border nav-links" href="#awards">AWARDS</a>
             <a class="semi-transparent-button with-border nav-links" href="#contact">CONTACT & RESUME</a>
 
-        </div>
+        <!-- </div> -->
     </div>
+</div>
 </section>
