--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,16 +1,16 @@
 <div class="section-wrapper">
-    <section class="section extra" id="extra">
+    <section class="section extra" id="contact">
         <div>
-            <div class="section-heading" id="chat-text">Contact</div>
+            <div class="section-heading" id="contact-text">Contact</div>
             <p class="paragraph-text">
-                Interesting work opportunity or collaboration? Send me a line!  <a href="mailto:{{ site.email }}">{{ site.email }}</a> 
+                Interesting work opportunity or collaboration? Send me a line!                      <a href="mailto:{{ site.email }}"><i class="head-icon fas fa-envelope"></i></a>
+                <a href="mailto:{{ site.email }}">{{ site.email }}</a> 
             </p>
             <p class="paragraph-text">
                 My resume is available here: <a href="{{ site.blog_url }}/Ben_Blumer_Resume.pdf">PDF</a>.
             </p>
             <div class="extra-links">
                 <span class="hint--bottom bottom-link" aria-label="Email">
-                    <a href="mailto:{{ site.email }}"><i class="head-icon fas fa-envelope"></i></a>
                 </span>
             </div>
         </div>
