--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,23 +1,20 @@
-
 <section class="head" id="nav">
     <div class="head-inner-wrap">
         <div class="profile-pic-div animated">
-            <a href="#about" class="profile-pic-link"><img src="{{ site.profile_picture }}" class="profile-pic"/></a>
+            <a href="#about" class="profile-pic-link"><img src="{{ site.profile_picture }}" class="profile-pic" /></a>
         </div>
         <div class="head-name head-title animated" id="head-name">{{ site.title }}</div>
         <div class="head-punchline animated">{{ site.description }}</div>
-        <div class="head-menu-wrap">
 
-            <!-- <div class="project-categories"> -->
+        <div class="head-menu-wrap">
 
             <a class="semi-transparent-button with-border nav-links" href="#about">ABOUT</a>
             <a class="semi-transparent-button with-border nav-links" href="#skills">SKILLS</a>
             <a class="semi-transparent-button with-border nav-links" href="#projects">PROJECTS</a>
-            <a class="semi-transparent-button with-border nav-links" href="#pubs">PATENTS <br/>AND<br/> PUBLICATIONS</a>
+            <a class="semi-transparent-button with-border nav-links" href="#pubs">PATENTS AND PUBLICATIONS</a>
             <a class="semi-transparent-button with-border nav-links" href="#awards">AWARDS</a>
             <a class="semi-transparent-button with-border nav-links" href="#contact">CONTACT & RESUME</a>
+            </div>
+        </div>
 
-        <!-- </div> -->
-    </div>
-</div>
 </section>
