Buttons resizing to window size

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,10 +11,11 @@
             <a class="semi-transparent-button with-border nav-links" href="#about">ABOUT</a>
             <a class="semi-transparent-button with-border nav-links" href="#skills">SKILLS</a>
             <a class="semi-transparent-button with-border nav-links" href="#projects">PROJECTS</a>
-            <a class="semi-transparent-button with-border nav-links" href="#pubs">PATENTS AND PUBLICATIONS</a>
             <a class="semi-transparent-button with-border nav-links" href="#awards">AWARDS</a>
-            <a class="semi-transparent-button with-border nav-links" href="#contact">CONTACT & RESUME</a>
-            </div>
+            <a class="semi-transparent-button with-border nav-links" href="#pubs">   PATENTS<span class="line-break">&</span> PUBLICATIONS</a>
+            <a class="semi-transparent-button with-border nav-links" href="#contact">CONTACT<span class="line-break">&</span> RESUME</a>
+
+         </div>
         </div>
 
 </section>
