--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -107,10 +107,10 @@ img {
   color: inherit;
 }
 .head-menu-wrap {
-  position: absolute;
+  /* position: absolute; */
   bottom: 40px;
   left: 50%;
-  transform: translate(-50%, 0);
+  /* transform: translate(-50%, 0); */
   display: grid;
   grid-template-columns: repeat(2, auto); /* Adjust based on the number of columns you need */
   gap: 10px; /* This sets both row and column gaps to 10px */
@@ -232,7 +232,6 @@ img {
 .semi-transparent-button:nth-child(even) {
   background-color: #87ceeb; 
 }
-
 
 
 .project-technology {
@@ -526,9 +525,13 @@ a {
 }
 
 .head-inner-wrap {
-  
+  align-items: center; /* This centers the child elements horizontally */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Adjusts space dynamically based on content size */
+  width: 100%; /* Ensure it spans the full width of its parent */
+  min-height: 100%; 
 }
-
 .bottom-link {
   margin: 0 5px;
 }
@@ -650,6 +653,7 @@ a {
       grid-template-columns: repeat(3, auto); /* Adjust for fewer columns on smaller screens */
       gap: 10px; /* Keep the gap consistent */
       width: 80%; /* Adjust width as necessary */
+      margin-top: 20px;
     }
   
   
